Cambio de Color Rojo Azul

--- a/src/app/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban-board/kanban-board.component.scss
@@ -26,7 +26,7 @@
   display: inline-block;
 }
 .priority.Urgente {
-  background-color: red;
+  background-color: blue;
   color: white;
 }
 .priority.Alta {
